[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Hero/Hero.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Objects/Hero/states/standard.gd" type="Script" id=3]
[ext_resource path="res://Objects/Hero/states/left_right.gd" type="Script" id=4]
[ext_resource path="res://gfx/bullet.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 28, 28 )

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 20.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.5
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Tangential Accel", "Trail" ]

[node name="Hero" type="KinematicBody2D" groups=[
"hero",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="icon" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Rays" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="RayRight" type="RayCast2D" parent="Rays" index="0"]

position = Vector2( 24, 24 )
enabled = true
exclude_parent = true
cast_to = Vector2( 8, 0 )
collision_mask = 1

[node name="RayRight2" type="RayCast2D" parent="Rays" index="1"]

position = Vector2( 24, -24 )
enabled = true
exclude_parent = true
cast_to = Vector2( 8, -8 )
collision_mask = 1

[node name="RayLeft" type="RayCast2D" parent="Rays" index="2"]

position = Vector2( -24, 24 )
enabled = true
exclude_parent = true
cast_to = Vector2( -8, 0 )
collision_mask = 1

[node name="RayLeft2" type="RayCast2D" parent="Rays" index="3"]

position = Vector2( -24, -24 )
enabled = true
exclude_parent = true
cast_to = Vector2( -8, -8 )
collision_mask = 1

[node name="States" type="Node" parent="." index="3"]

editor/display_folded = true

[node name="Standard" type="Node" parent="States" index="0"]

script = ExtResource( 3 )
jump_strength = 300
speed = 200

[node name="LeftRight" type="Node" parent="States" index="1"]

script = ExtResource( 4 )
speed = 200
max_gravity = 300

[node name="Stagger" type="Node" parent="States" index="2"]

[node name="Timers" type="Node2D" parent="." index="4"]

editor/display_folded = true

[node name="DieTimer" type="Timer" parent="Timers" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="DieParticles" type="Particles2D" parent="." index="5"]

emitting = false
amount = 8
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.83
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 5 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="Target" type="Position2D" parent="." index="6"]

_sections_unfolded = [ "Transform" ]

[node name="icon" type="Sprite" parent="Target" index="0"]

modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[connection signal="timeout" from="Timers/DieTimer" to="." method="_on_DieTimer_timeout"]


